Changed Jenkins url approach